    helper, including the magic ``_method`` field. The IDs will clash if there
    are multiple forms on the page.

* webhelpers.html.tools:

  - Preserve case of "method" arg in ``button_to()`` for XHTML compatibility. 
    Patch by transducer.

* webhelpers.text:

  - Urlencode ``urlify()`` return value in case it contains special
    characters like "?". Reported by mcd34@gmail.com.

1.1 (2010-08-09)
----------------

* webhelpers.paginate:

  - Remove stray Routes import. (Other conditional Routes imports remain for
    backward compatibility; see module docstring.)

* webhelpers.pylonslib.minify:

  - Remove _jsmin module due to licensing issues. Details are in
    webhelpers/pylonslib/_jsmin.py .  You can install the "jsmin" package in
    PyPI (which has the same license), and the helper will use it. If that
    package is installed, the helper will use it.  Otherwise the helper will
    emit a warning and leave the Javascript unchanged. CSS minification is not
    affected.


1.0 (2010-06-01)
-----------------

* webhelpers.html.tools:

 - Bugfix re URLs surrounded by [].  Bug #32.

1.0rc1 (2010-05-24)
-------------------

* webhelpers.html.tags:

 - Change 'id' argument to all form field helpers. The default value is now
   NotGiven rather than None. NotGiven tells WebHelpers to create an ID
   attribute based on the field name (formerly None did this). None suppresses
   the ID attribute entirely (formerly "" did this, and still does for backward
   compatibility).  This behavior of None is consistent with other parts of
   WebHelpers.

* webhelpers.misc:

 - New ``format_exception`` helper to display an exception as Python would but
   without the traceback.

1.0b7 (2010-05-16)
------------------

* webhelpers.containers:

  - Bugfix in ``canada_provinces``, reported by rpetrello.

* webhelpers.html.grid / webhelpers.pylonslib.grid:

  - Updates by Ergo, mainly styling and CSS classes.
  - Rename classes: ObjectGrid, PylonsGrid, PylonsObjectGrid.
